# de-floribot-software

./: .gitignore  .project  README.md  create_packages_and_projects.sh  make_packages_and_projects.sh
floribot_base/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_base/[Targets]/[exe] floribot_base_node/Source Files/: floribot_base_node.cpp
floribot_base/doc/: kinematik_messungen.xlsx
floribot_base/src/: CmdVelController.py  FixKineticParams.py  Floribot_accu_watchdog.cpp  Floribot_accu_watchdog.h  Floribot_base.cpp  Floribot_base.h  explorer_comms.cc  explorer_comms.h  floribot_accu_watchdog_node.cpp  floribot_base_node.cpp
floribot_base/src/simulink/: floribot_accu_watchdog.slx
floribot_base/src/simulink/floribot_accu_watchdog_ert_rtw/: floribot_accu_watchdog.cpp  floribot_accu_watchdog.h  floribot_accu_watchdog_private.h  floribot_accu_watchdog_types.h  rtwtypes.h
floribot_navigation/: .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_navigation/src/: Floribot_find_goal.cpp  Floribot_find_goal.h  Histogramm.cpp  Histogramm.h  ObjCloud.py
floribot_robot/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_robot/launch/: beistel_testings.launch  floribot_find_goal.launch  floribot_task1_full.launch  floribot_task2_full.launch  floribot_task3_full.launch  floribot_task3_full_accu.launch  floribot_task5_full.launch  floribot_teleop.launch  floribot_teleop_new.launch  floribot_teleop_owncmdvel.launch  floribot_tf.launch  hokuyo.launch  odometry.launch  ptu46_actions.launch  startup_floribot.sh  task3.launch
floribot_stage/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
floribot_stage/launch/: floribot_find_goal.launch  floribot_stage.launch  floribot_stage_ohne_nav.launch  floribot_task1.launch  floribot_task2.launch  floribot_task3.launch  floribot_teleop.launch
floribot_stage/worlds/: Task1_pfm.world  Task1_rnd.world  floribot.inc  task1.world  task1_2013.world  task1_2013_45cm.world  test2.world  test_fuerte.world  test_fuerte1.world
floribot_task1/: .cproject  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_task1/src/: Floribot_task1.cpp  Floribot_task1.h  Histogramm.cpp  Histogramm.h  Statediagramm.cpp  Statediagramm.h  floribot_task1_node.cpp
floribot_task2/: .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_task2/src/: Codepattern.cpp  Codepattern.h  Floribot_task2.cpp  Floribot_task2.h  Histogramm.cpp  Histogramm.h  Statediagramm.cpp  Statediagramm.h  floribot_task2_node.cpp
floribot_task3/: .cproject  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_task3/src/: Floribot_task3.cpp  Floribot_task3.h  Histogramm.cpp  Histogramm.h  SHMap.cpp  SHMap.h  Sector.cpp  Sector.h  SectorHistogram.cpp  SectorHistogram.h  floribot_task3_node.cpp  test_timer.cpp
floribot_task3/src/simulink/: floribot_task3.slx
floribot_task3/src/simulink/floribot_task3_ert_rtw/: floribot_task3.cpp  floribot_task3.h  floribot_task3_private.h  floribot_task3_types.h  rtwtypes.h
floribot_task5/: CMakeLists.txt  manifest.xml
floribot_task5/src/: Florbot_task5_ptu.cpp  Florbot_task5_ptu.h  Floribot_task5_nav.cpp  Floribot_task5_nav.h  Histogramm.cpp  Histogramm.h  Statediagramm.cpp  Statediagramm.h  florbot_task5_ptu_node.cpp  floribot_task5_nav_node.cpp
floribot_wiimote/: .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
floribot_wiimote/src/: Floribot_wiimote.cpp  Floribot_wiimote.cpp.lost  Floribot_wiimote.h  floribot_wiimote_node.cpp
floribot_wiimote/src/simulink/: floribot_wiimote.slx
phidgets/: .cproject  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  manifest.xml  odometry.launch
phidgets/msg/: stepper_params.msg
phidgets/msg_gen/lisp/: _package.lisp  _package_accelerometer_params.lisp  _package_encoder_params.lisp  _package_ir_params.lisp  _package_joystick_params.lisp  _package_led_params.lisp  _package_manager_params.lisp  _package_phsensor_params.lisp  _package_pid_params.lisp  _package_rfid_params.lisp  _package_servo_params.lisp  _package_spatial_params.lisp  _package_stepper_params.lisp  _package_textlcd_params.lisp  accelerometer_params.lisp  encoder_params.lisp  interface_kit_params.lisp  ir_params.lisp  joystick_params.lisp  led_params.lisp  manager_params.lisp  motor_params.lisp  phidgets-msg.asd  phsensor_params.lisp  pid_params.lisp  rfid_params.lisp  servo_params.lisp  spatial_params.lisp  stepper_params.lisp  textlcd_params.lisp
phidgets/src/: accelerometer.cpp  accelerometer_client.cpp  advanced_servo.cpp  advanced_servo_client.cpp  high_speed_encoder.cpp  high_speed_encoder_client.cpp  interface_kit.cpp  interface_kit_client.cpp  ir.cpp  ir_client.cpp  joystick.cpp  joystick_motor_control.cpp  joystick_servo_control.cpp  led.cpp  led_client.cpp  lidar.cpp  lidar_client.cpp  manager.cpp  manager_client.cpp  motor_control_hc_client.cpp  odometry.cpp  phsensor.cpp  phsensor_client.cpp  pid.cpp  rfid.cpp  rfid_client.cpp  servo_glimpse.cpp  spatial.cpp  spatial_client.cpp  stepper.cpp  stepper_client.cpp  textlcd.cpp  textlcd_client.cpp
phidgets/srv/: stepper.srv
phidgets/srv_gen/lisp/: _package.lisp  _package_pid.lisp  _package_servo_reference.lisp  _package_stepper.lisp  (+4 more)
ptu46/: ptu46_actions.launch
ptu46/src/: ptu46_driver.cc  ptu46_node.cc
ptu_control/: Makefile  cmake_install.cmake
(+105 files in other folders)
